--- a/hierarchy/test_linear_jax.ipynb
+++ b/hierarchy/test_linear_jax.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "53d7976e",
    "metadata": {},
    "outputs": [],
@@ -151,7 +151,7 @@
     "    return x2 - x1\n",
     "\n",
     "\n",
-    "@jax.jit\n",
+    "# @jax.jit\n",
     "def update_belief(var: Variable, ftov_msgs): # Calculate Eq. (7)\n",
     "    belief = var.belief.zero_like()\n",
     "    for i in range(ftov_msgs.eta.shape[0]):\n",
@@ -159,7 +159,7 @@
     "    return belief\n",
     "\n",
     "\n",
-    "@jax.jit\n",
+    "# @jax.jit\n",
     "def compute_vtof_msgs(var: Variable, ftov_msgs): # Eq.(19); do for each variable (x_m)\n",
     "    vtof_msgs = []\n",
     "    for i, idx in enumerate(var.adj_factor_idx): # for each f_si connected to x_m...\n",
@@ -179,7 +179,7 @@
     "    return 0.5 * r @ z_Lam @ r.T\n",
     "\n",
     "\n",
-    "@partial(jax.jit, static_argnames=[\"h_fn\", \"w\"])\n",
+    "# @partial(jax.jit, static_argnames=[\"h_fn\", \"w\"])\n",
     "def factor_update(factor, xs, h_fn, w):\n",
     "    h = h_fn(xs)\n",
     "    J = jax.jacrev(h_fn)(xs).reshape(h.size, xs.size) # Jacobian auto-diff (J_s)\n",
@@ -192,7 +192,7 @@
     "    return Gaussian(eta, Lam) # Factor; represented w.r.t. neighboring variables xs\n",
     "\n",
     "\n",
-    "@jax.jit\n",
+    "# @jax.jit\n",
     "def compute_ftov_msg(factor, vtof_msgs): # Ch 3.5 Message Passing at a Factor Node\n",
     "    N_adj, dim = vtof_msgs.eta.shape # #Ni_v * 3 (#Vars is vmapped)\n",
     "    pot = factor.potential.copy() # log(f_s), but for only a specific variable a factor is connected to.\n",
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 70,
    "id": "87bb7439",
    "metadata": {},
    "outputs": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 75,
    "id": "fff27d5b",
    "metadata": {},
    "outputs": [],
@@ -632,14 +632,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 76,
    "id": "fe836c0c",
    "metadata": {},
    "outputs": [],
    "source": [
     "N = 5000\n",
     "step = 25\n",
-    "prob = 0.0\n",
+    "prob = 0.05\n",
     "radius = 50\n",
     "prior_prop = 0.02\n",
     "prior_sigma = 1.0\n",
@@ -672,15 +672,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 77,
    "id": "ae8281df",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "85003.796875\n"
+     "ename": "TypeError",
+     "evalue": "sub got incompatible shapes for broadcasting: (0,), (2,).",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[77], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m GT \u001b[38;5;241m=\u001b[39m jnp\u001b[38;5;241m.\u001b[39masarray(\n\u001b[0;32m      2\u001b[0m     np\u001b[38;5;241m.\u001b[39marray([[n[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mposition\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mx\u001b[39m\u001b[38;5;124m\"\u001b[39m], n[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mposition\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124my\u001b[39m\u001b[38;5;124m\"\u001b[39m]] \u001b[38;5;28;01mfor\u001b[39;00m n \u001b[38;5;129;01min\u001b[39;00m nodes], dtype\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39mfloat32)\n\u001b[0;32m      3\u001b[0m )\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28mvars\u001b[39m, prior_facs, between_facs \u001b[38;5;241m=\u001b[39m \u001b[43mrun_iters\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mvars\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mprior_facs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbetween_facs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_iters\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1000\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      5\u001b[0m energy \u001b[38;5;241m=\u001b[39m energy_map_jax(\u001b[38;5;28mvars\u001b[39m, GT)\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mfloat\u001b[39m(energy))\n",
+      "    \u001b[1;31m[... skipping hidden 16 frame]\u001b[0m\n",
+      "Cell \u001b[1;32mIn[75], line 316\u001b[0m, in \u001b[0;36mrun_iters\u001b[1;34m(vars, prior_facs, between_facs, num_iters)\u001b[0m\n\u001b[0;32m    314\u001b[0m \u001b[38;5;129m@partial\u001b[39m(jax\u001b[38;5;241m.\u001b[39mjit, static_argnames\u001b[38;5;241m=\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnum_iters\u001b[39m\u001b[38;5;124m\"\u001b[39m,))\n\u001b[0;32m    315\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mrun_iters\u001b[39m(\u001b[38;5;28mvars\u001b[39m, prior_facs, between_facs, num_iters: \u001b[38;5;28mint\u001b[39m):\n\u001b[1;32m--> 316\u001b[0m     (\u001b[38;5;28mvars\u001b[39m, prior_facs, between_facs), _ \u001b[38;5;241m=\u001b[39m \u001b[43mjax\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlax\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mscan\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    317\u001b[0m \u001b[43m        \u001b[49m\u001b[43mone_step\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    318\u001b[0m \u001b[43m        \u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mvars\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mprior_facs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbetween_facs\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    319\u001b[0m \u001b[43m        \u001b[49m\u001b[43mxs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[0;32m    320\u001b[0m \u001b[43m        \u001b[49m\u001b[43mlength\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnum_iters\u001b[49m\n\u001b[0;32m    321\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    322\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mvars\u001b[39m, prior_facs, between_facs\n",
+      "    \u001b[1;31m[... skipping hidden 10 frame]\u001b[0m\n",
+      "Cell \u001b[1;32mIn[75], line 309\u001b[0m, in \u001b[0;36mone_step\u001b[1;34m(state, _)\u001b[0m\n\u001b[0;32m    307\u001b[0m \u001b[38;5;28mvars\u001b[39m, prior_facs, between_facs \u001b[38;5;241m=\u001b[39m state\n\u001b[0;32m    308\u001b[0m \u001b[38;5;28mvars\u001b[39m, vtof_msgs, linpoints \u001b[38;5;241m=\u001b[39m update_variable(\u001b[38;5;28mvars\u001b[39m)\n\u001b[1;32m--> 309\u001b[0m prior_facs, \u001b[38;5;28mvars\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[43mupdate_factor\u001b[49m\u001b[43m(\u001b[49m\u001b[43mprior_facs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mvars\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvtof_msgs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlinpoints\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mh_fn\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43ml2\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    310\u001b[0m between_facs, \u001b[38;5;28mvars\u001b[39m \u001b[38;5;241m=\u001b[39m update_factor(between_facs, \u001b[38;5;28mvars\u001b[39m, vtof_msgs, linpoints, h2_fn, l2)\n\u001b[0;32m    311\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m (\u001b[38;5;28mvars\u001b[39m, prior_facs, between_facs), \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "    \u001b[1;31m[... skipping hidden 16 frame]\u001b[0m\n",
+      "Cell \u001b[1;32mIn[74], line 301\u001b[0m, in \u001b[0;36mupdate_factor\u001b[1;34m(facs, vars, vtof_msgs, linpoints, f, w)\u001b[0m\n\u001b[0;32m    293\u001b[0m linpoints_reordered \u001b[38;5;241m=\u001b[39m jax\u001b[38;5;241m.\u001b[39mtree_util\u001b[38;5;241m.\u001b[39mtree_map(\n\u001b[0;32m    294\u001b[0m     \u001b[38;5;28;01mlambda\u001b[39;00m x: x[facs\u001b[38;5;241m.\u001b[39madj_var_id], linpoints\n\u001b[0;32m    295\u001b[0m )\n\u001b[0;32m    297\u001b[0m facs\u001b[38;5;241m.\u001b[39mpotential \u001b[38;5;241m=\u001b[39m jax\u001b[38;5;241m.\u001b[39mvmap(factor_update, in_axes\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;28;01mNone\u001b[39;00m))(\n\u001b[0;32m    298\u001b[0m     facs, linpoints_reordered, f, w\n\u001b[0;32m    299\u001b[0m )\n\u001b[1;32m--> 301\u001b[0m ftov_msgs \u001b[38;5;241m=\u001b[39m \u001b[43mjax\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvmap\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcompute_ftov_msg\u001b[49m\u001b[43m)\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfacs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvtof_msgs_reordered\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    303\u001b[0m \u001b[38;5;66;03m# ---- Robust scatter: flatten indices and updates to avoid shape/broadcast ambiguity ----\u001b[39;00m\n\u001b[0;32m    304\u001b[0m N \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mvars\u001b[39m\u001b[38;5;241m.\u001b[39mmsgs\u001b[38;5;241m.\u001b[39meta\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m]\n",
+      "    \u001b[1;31m[... skipping hidden 21 frame]\u001b[0m\n",
+      "Cell \u001b[1;32mIn[74], line 276\u001b[0m, in \u001b[0;36mcompute_ftov_msg\u001b[1;34m(factor, vtof_msgs)\u001b[0m\n\u001b[0;32m    273\u001b[0m     out_Lam \u001b[38;5;241m=\u001b[39m jnp\u001b[38;5;241m.\u001b[39mstack([msg1_Lam, msg2_Lam], axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m    274\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m Gaussian(out_eta, out_Lam)\n\u001b[1;32m--> 276\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mjax\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlax\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcond\u001b[49m\u001b[43m(\u001b[49m\u001b[43mN_adj\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m==\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43munary_case\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbinary_case\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moperand\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
+      "    \u001b[1;31m[... skipping hidden 11 frame]\u001b[0m\n",
+      "Cell \u001b[1;32mIn[74], line 260\u001b[0m, in \u001b[0;36mcompute_ftov_msg.<locals>.binary_case\u001b[1;34m(_)\u001b[0m\n\u001b[0;32m    257\u001b[0m Lam_m2 \u001b[38;5;241m=\u001b[39m Lam\u001b[38;5;241m.\u001b[39mat[D:, D:]\u001b[38;5;241m.\u001b[39madd(\u001b[38;5;241m-\u001b[39mLam2_in)\n\u001b[0;32m    259\u001b[0m eta1b \u001b[38;5;241m=\u001b[39m eta[:D]\n\u001b[1;32m--> 260\u001b[0m eta2b \u001b[38;5;241m=\u001b[39m \u001b[43meta\u001b[49m\u001b[43m[\u001b[49m\u001b[43mD\u001b[49m\u001b[43m:\u001b[49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[43meta2_in\u001b[49m\n\u001b[0;32m    261\u001b[0m Lam11b \u001b[38;5;241m=\u001b[39m Lam[:D, :D]\n\u001b[0;32m    262\u001b[0m Lam12b \u001b[38;5;241m=\u001b[39m Lam[:D, D:]\n",
+      "File \u001b[1;32md:\\anaconda3\\envs\\jax-gpu\\lib\\site-packages\\jax\\_src\\numpy\\array_methods.py:1083\u001b[0m, in \u001b[0;36m_forward_operator_to_aval.<locals>.op\u001b[1;34m(self, *args)\u001b[0m\n\u001b[0;32m   1082\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mop\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;241m*\u001b[39margs):\n\u001b[1;32m-> 1083\u001b[0m   \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mgetattr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43maval\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m_\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mname\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32md:\\anaconda3\\envs\\jax-gpu\\lib\\site-packages\\jax\\_src\\numpy\\array_methods.py:583\u001b[0m, in \u001b[0;36m_defer_to_unrecognized_arg.<locals>.deferring_binary_op\u001b[1;34m(self, other)\u001b[0m\n\u001b[0;32m    581\u001b[0m args \u001b[38;5;241m=\u001b[39m (other, \u001b[38;5;28mself\u001b[39m) \u001b[38;5;28;01mif\u001b[39;00m swap \u001b[38;5;28;01melse\u001b[39;00m (\u001b[38;5;28mself\u001b[39m, other)\n\u001b[0;32m    582\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(other, _accepted_binop_types):\n\u001b[1;32m--> 583\u001b[0m   \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mbinary_op\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    584\u001b[0m \u001b[38;5;66;03m# Note: don't use isinstance here, because we don't want to raise for\u001b[39;00m\n\u001b[0;32m    585\u001b[0m \u001b[38;5;66;03m# subclasses, e.g. NamedTuple objects that may override operators.\u001b[39;00m\n\u001b[0;32m    586\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mtype\u001b[39m(other) \u001b[38;5;129;01min\u001b[39;00m _rejected_binop_types:\n",
+      "File \u001b[1;32md:\\anaconda3\\envs\\jax-gpu\\lib\\site-packages\\jax\\_src\\numpy\\ufunc_api.py:182\u001b[0m, in \u001b[0;36mufunc.__call__\u001b[1;34m(self, out, where, *args)\u001b[0m\n\u001b[0;32m    180\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mNotImplementedError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwhere argument of \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    181\u001b[0m call \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__static_props[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcall\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_call_vectorized\n\u001b[1;32m--> 182\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mcall\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "    \u001b[1;31m[... skipping hidden 14 frame]\u001b[0m\n",
+      "File \u001b[1;32md:\\anaconda3\\envs\\jax-gpu\\lib\\site-packages\\jax\\_src\\numpy\\ufuncs.py:1568\u001b[0m, in \u001b[0;36msubtract\u001b[1;34m(x, y)\u001b[0m\n\u001b[0;32m   1541\u001b[0m \u001b[38;5;129m@binary_ufunc\u001b[39m(identity\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, at\u001b[38;5;241m=\u001b[39m_subtract_at)\n\u001b[0;32m   1542\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21msubtract\u001b[39m(x: ArrayLike, y: ArrayLike, \u001b[38;5;241m/\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Array:\n\u001b[0;32m   1543\u001b[0m \u001b[38;5;250m  \u001b[39m\u001b[38;5;124;03m\"\"\"Subtract two arrays element-wise.\u001b[39;00m\n\u001b[0;32m   1544\u001b[0m \n\u001b[0;32m   1545\u001b[0m \u001b[38;5;124;03m  JAX implementation of :obj:`numpy.subtract`. This is a universal function,\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   1566\u001b[0m \u001b[38;5;124;03m    Array([-10,  -9,  -8,  -7], dtype=int32)\u001b[39;00m\n\u001b[0;32m   1567\u001b[0m \u001b[38;5;124;03m  \"\"\"\u001b[39;00m\n\u001b[1;32m-> 1568\u001b[0m   out \u001b[38;5;241m=\u001b[39m \u001b[43mlax\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msub\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mpromote_args\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43msubtract\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1569\u001b[0m   jnp_error\u001b[38;5;241m.\u001b[39m_set_error_if_nan(out)\n\u001b[0;32m   1570\u001b[0m   \u001b[38;5;28;01mreturn\u001b[39;00m out\n",
+      "    \u001b[1;31m[... skipping hidden 10 frame]\u001b[0m\n",
+      "File \u001b[1;32md:\\anaconda3\\envs\\jax-gpu\\lib\\site-packages\\jax\\_src\\lax\\lax.py:136\u001b[0m, in \u001b[0;36m_try_broadcast_shapes\u001b[1;34m(name, *shapes)\u001b[0m\n\u001b[0;32m    134\u001b[0m       result_shape\u001b[38;5;241m.\u001b[39mappend(non_1s[\u001b[38;5;241m0\u001b[39m])\n\u001b[0;32m    135\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m--> 136\u001b[0m       \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m got incompatible shapes for broadcasting: \u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m    137\u001b[0m                       \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m, \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(\u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28mstr\u001b[39m,\u001b[38;5;250m \u001b[39m\u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28mtuple\u001b[39m,\u001b[38;5;250m \u001b[39mshapes)))\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m    138\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mtuple\u001b[39m(result_shape)\n",
+      "\u001b[1;31mTypeError\u001b[0m: sub got incompatible shapes for broadcasting: (0,), (2,)."
      ]
     }
    ],
@@ -692,6 +713,26 @@
     "energy = energy_map_jax(vars, GT)\n",
     "print(float(energy))\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "ba9b77ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(101, 2)\n",
+      "(9436, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(prior_facs.potential.eta.shape)\n",
+    "print(between_facs.potential.eta.shape)"
    ]
   },
   {
